--- a/index.html
+++ b/index.html
@@ -9,11 +9,28 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
 </head>
-
 <body>
-  <h1 class="center">
-	Technologická firma
-  </h1>
+    <div class="section no-pad-bot">
+      <div class="container">
+        <br><br>
+        <h1 class="header center teal-text text-lighten-2">eat my
+					<h4 class="center">a.s.(s) </h4>
+				</h1>
+
+        <div class="row center">
+          <h5 class="header col s12 light">aneb všechno co si dokážete představit na mobilu</h5>
+        </div>
+        <div class="row center">
+          <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Produkty</a>
+        </div>
+        <br><br>
+
+      </div>
+    </div>
+ 
+  </div>
+
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"> </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 	<script src="script.js">
