Delted link and changed text

--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
 	<meta name="viewport" content="width=device-width">
 	<title>repl.it</title>
 	<link href="style.css" rel="stylesheet" type="text/css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
 </head>
+
 <body>
-    <div class="section no-pad-bot">
-      <div class="container">
-        <br><br>
-        <h1 class="header center teal-text text-lighten-2">eat my
+	<div class="section no-pad-bot">
+		<div class="container">
+			<br><br>
+        <h1 class="header center text-lighten-2">
+					tech
 					<h4 class="center">a.s.(s) </h4>
 				</h1>
 
@@ -21,7 +23,7 @@
           <h5 class="header col s12 light">aneb všechno co si dokážete představit na mobilu</h5>
         </div>
         <div class="row center">
-          <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Produkty</a>
+          <a href="#products" id="download-button" class="btn-large waves-effect waves-light">Produkty</a>
         </div>
         <br><br>
 
