--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 </head>
 
 <body>
-	<div class="section no-pad-bot">
-		<div class="container">
-			<br><br>
+	<section id="hero">
+		<div class="section no-pad-bot">
+			<div class="container">
+				<br><br>
         <h1 class="header center text-lighten-2">
 					tech
 					<h4 class="center">a.s.(s) </h4>
@@ -25,12 +26,37 @@
         <div class="row center">
           <a href="#products" id="download-button" class="btn-large waves-effect waves-light">Produkty</a>
         </div>
-        <br><br>
 
       </div>
     </div>
  
   </div>
+  </section>
+
+<section id="port">
+	<div class="row center">
+  <!-- Modal Trigger -->
+<h2>Produkty</h2>
+  <a class="waves-effect waves-light btn modal-trigger" href="#knifeModal">Nůž na mobil</a>
+
+  <!-- Modal Structure -->
+  <div id="knifeModal" class="modal">
+    <div class="modal-content">
+      <h4>Název</h4>
+      <p>Krátký popisek</p>
+			<img src="img/knife.png"
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-close waves-effect waves-red btn-flat">Zavřít</a>
+    </div>
+  </div>
+	</div>
+	</div>
+</section>
+
+<section id="about">
+  
+</section>
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"> </script>
