Added styling and modals

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>repl.it</title>
+	<title>Tech site</title>
 	<link href="style.css" rel="stylesheet" type="text/css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
@@ -37,9 +37,9 @@
 	<div class="row center">
   <!-- Modal Trigger -->
 <h2>Produkty</h2>
-  <a class="waves-effect waves-light btn modal-trigger" href="#knifeModal">Nůž na mobil</a>
+  <a class="waves-effect waves-light btn-large modal-trigger" href="#knifeModal">Nůž na mobil</a>
 
-  <!-- Modal Structure -->
+  <!-- Nůž -->
   <div id="knifeModal" class="modal">
     <div class="modal-content">
       <h4>Název</h4>
@@ -51,11 +51,53 @@
     </div>
   </div>
 	</div>
+
+  <a class="waves-effect waves-light btn-large modal-trigger" href="#screwModal">Šroubovák na mobil</a>
+
+  <!-- Modal Structure -->
+  <div id="screwModal" class="modal">
+    <div class="modal-content">
+      <h4>Název</h4>
+      <p>Krátký popisek</p>
+			<img src="img/screwdriver.png"
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-close waves-effect waves-red btn-flat">Zavřít</a>
+    </div>
+  </div>
+	</div>
+	
+	  <a class="waves-effect waves-light btn-large modal-trigger" href="#sawModal">Pila na mobil</a>
+
+  <!-- Modal Structure -->
+  <div id="sawModal" class="modal">
+    <div class="modal-content">
+      <h4>Název</h4>
+      <p>Krátký popisek</p>
+			<img src="img/knife.png"
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-close waves-effect waves-red btn-flat">Zavřít</a>
+    </div>
+  </div>
+	</div>
+	
 	</div>
 </section>
 
 <section id="about">
-  
+	<div class="row center">
+
+
+  <div class="col s2"><span id="name">Klára Machová</span><span id="post">Hlavní designérka</span></div>
+	<div><span id="name">Zuzana Halousková</span><span id="post">%POST%</span></div>
+	<div><span id="name">Oliver Filip Novotný</span><span id="post">%POST%</span></div>
+	<div><span id="name">Vladimír Svoboda</span><span id="post">%POST%</span></div>
+	<div><span id="name">Filip Troníček</span><span id="post">Ten, kdo vypil nejvíc čaje a tajně ho miluje Klárka</span></div>
+
+
+
+	</div>
 </section>
 
 
