--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
 	<div class="row center">
 
 
-  <div class="col s2"><span id="name">Klára Machová</span><span id="post">Hlavní designérka</span></div>
-	<div><span id="name">Zuzana Halousková</span><span id="post">%POST%</span></div>
-	<div><span id="name">Oliver Filip Novotný</span><span id="post">%POST%</span></div>
-	<div><span id="name">Vladimír Svoboda</span><span id="post">%POST%</span></div>
-	<div><span id="name">Filip Troníček</span><span id="post">Ten, kdo vypil nejvíc čaje a tajně ho miluje Klárka</span></div>
+  <div class="col s12"><img src="img/klarka.png"><br><span id="name">Klára Machová</span><br><span id="post">Hlavní designérka (velmi náhodný)</span></div>
+	<div class="col s12"><img src="https://proxy.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.00uBFxlGZaN1Z0yhbQ-vSgHaHa%26pid%3DApi&f=1"><br><span id="name">Zuzana Halousková</span><br><span id="post">Upír již od roku 1997</span></div>
+	<div class="col s12"><img src="https://proxy.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.00uBFxlGZaN1Z0yhbQ-vSgHaHa%26pid%3DApi&f=1"><br><span id="name">Oliver Filip Novotný</span><br><span id="post">Dežo</span></div>
+	<div class="col s12"><img src="https://proxy.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.00uBFxlGZaN1Z0yhbQ-vSgHaHa%26pid%3DApi&f=1"><br><span id="name">Vladimír Svoboda</span><br><span id="post">Epic memer</span></div>
+	<div class="col s12"><img src="img/filip.png"><br><span id="name">Filip Troníček</span><br><span id="post">Ten, kdo vypil nejvíc čaje při tom, co se díval jak Klárka dělala stránku</span></div>
 
 
 
