--- a/index.html
+++ b/index.html
@@ -7,8 +7,41 @@
 	<title>Tech site</title>
 	<link href="style.css" rel="stylesheet" type="text/css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 </head>
+<header>
+	<!-- Menu -->
+
+  <ul id="slide-out" class="sidenav">
+    <li><div class="user-view">
+      <div class="background">
+      </div>
+      <a href="#user"><img class="circle" src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg"></a>
+      <a href="#name"><span class="white-text name">Tech</span></a>
+    </div></li>
+    <li>
+			<a href="#!">
+				<i class="material-icons">home</i> <!-- ikonka -->
+				Domů <!-- nápis menu -->
+			</a>
+		</li>
+    <li>
+			<a href="#!">
+				<i class="material-icons">home</i> <!-- ikonka -->
+				Second Link <!-- nápis menu -->
+			</a>
+		</li>
+    <li>
+			<a href="#!">
+				<i class="material-icons">home</i> <!-- ikonka -->
+				Third Link With Waves <!-- nápis menu -->
+			</a>
+		</li>
+  </ul>
+  <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+</header>
+<!-- Hero  -->
 
 <body>
 	<section id="hero">
@@ -32,7 +65,7 @@
  
   </div>
   </section>
-
+<!-- Produkty -->
 <section id="port">
 	<div class="row center">
   <!-- Modal Trigger -->
@@ -84,6 +117,8 @@
 	
 	</div>
 </section>
+
+<!-- o nás -->
 
 <section id="about">
 	<div class="row center">
