--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 		</li>
     <li>
 			<a href="#!">
-				<i class="material-icons">home</i> <!-- ikonka -->
-				Second Link <!-- nápis menu -->
+				<i class="material-icons">smartphone</i> <!-- ikonka -->
+				Portfolio <!-- nápis menu -->
 			</a>
 		</li>
     <li>
