--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 		</li>
     <li>
 			<a href="#!">
-				<i class="material-icons">home</i> <!-- ikonka -->
-				Third Link With Waves <!-- nápis menu -->
+				<i class="material-icons">person</i> <!-- ikonka -->
+				O nás <!-- nápis menu -->
 			</a>
 		</li>
   </ul>
-  <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+  <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons medium">menu</i></a>
 </header>
 <!-- Hero  -->
 
@@ -125,8 +125,8 @@
 
 
   <div class="col s12"><img src="img/klarka.png"><br><span id="name">Klára Machová</span><br><span id="post">Hlavní designérka (velmi náhodný)</span></div>
-	<div class="col s12"><img src="https://proxy.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.00uBFxlGZaN1Z0yhbQ-vSgHaHa%26pid%3DApi&f=1"><br><span id="name">Zuzana Halousková</span><br><span id="post">Upír již od roku 1997</span></div>
-	<div class="col s12"><img src="https://proxy.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.00uBFxlGZaN1Z0yhbQ-vSgHaHa%26pid%3DApi&f=1"><br><span id="name">Oliver Filip Novotný</span><br><span id="post">Dežo</span></div>
+	<div class="col s12"><img src="img/zuzka.png"><br><span id="name">Zuzana Halousková</span><br><span id="post">Upír již od roku 1997</span></div>
+	<div class="col s12"><img src="img/oliver.png"><br><span id="name">Oliver Filip Novotný</span><br><span id="post">Busts into the battlefield</span></div>
 	<div class="col s12"><img src="https://proxy.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.00uBFxlGZaN1Z0yhbQ-vSgHaHa%26pid%3DApi&f=1"><br><span id="name">Vladimír Svoboda</span><br><span id="post">Epic memer</span></div>
 	<div class="col s12"><img src="img/filip.png"><br><span id="name">Filip Troníček</span><br><span id="post">Ten, kdo vypil nejvíc čaje při tom, co se díval jak Klárka dělala stránku</span></div>
 
