--- a/index.html
+++ b/index.html
@@ -124,11 +124,11 @@
 	<div class="row center">
 
 
-  <div class="col s12"><img src="img/klarka.png"><br><span id="name">Klára Machová</span><br><span id="post">Hlavní designérka (velmi náhodný)</span></div>
+  <div class="col s12"><img src="img/klarka.png"><br><span id="name">Klára Machová</span><br><span id="post">Ta, co si místo CSP četla</span></div>
 	<div class="col s12"><img src="img/zuzka.png"><br><span id="name">Zuzana Halousková</span><br><span id="post">Upír již od roku 1997</span></div>
 	<div class="col s12"><img src="img/oliver.png"><br><span id="name">Oliver Filip Novotný</span><br><span id="post">Busts into the battlefield</span></div>
-	<div class="col s12"><img src="https://proxy.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.00uBFxlGZaN1Z0yhbQ-vSgHaHa%26pid%3DApi&f=1"><br><span id="name">Vladimír Svoboda</span><br><span id="post">Epic memer</span></div>
-	<div class="col s12"><img src="img/filip.png"><br><span id="name">Filip Troníček</span><br><span id="post">Ten, kdo vypil nejvíc čaje při tom, co se díval jak Klárka dělala stránku</span></div>
+	<div class="col s12"><img src="img/vlada.png"><br><span id="name">Vladimír Svoboda</span><br><span id="post">Epic memer</span></div>
+	<div class="col s12"><img src="img/filip.png"><br><span id="name">Filip Troníček</span><br><span id="post">Fucking useless</span></div>
 
 
 
