--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
       <div class="background">
       </div>
       <a href="#user"><img class="circle" src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg"></a>
-      <a href="#name"><span class="white-text name">Tech</span></a>
+      <a href=""><span class="white-text name">Tech</span></a>
     </div></li>
     <li>
-			<a href="#!">
+			<a id="link" href="#hero">
 				<i class="material-icons">home</i> <!-- ikonka -->
 				Domů <!-- nápis menu -->
 			</a>
@@ -39,7 +39,7 @@
 			</a>
 		</li>
   </ul>
-  <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons medium">menu</i></a>
+  <a href="#" data-target="slide-out" class="sidenav-trigger sticky"><i class="material-icons medium">menu</i></a>
 </header>
 <!-- Hero  -->
 
@@ -77,7 +77,7 @@
     <div class="modal-content">
       <h4>Název</h4>
       <p>Krátký popisek</p>
-			<img src="img/knife.png"
+			<img src="img/pr/knife.png"
     </div>
     <div class="modal-footer">
       <a href="#!" class="modal-close waves-effect waves-red btn-flat">Zavřít</a>
@@ -92,7 +92,7 @@
     <div class="modal-content">
       <h4>Název</h4>
       <p>Krátký popisek</p>
-			<img src="img/screwdriver.png"
+			<img src="img/pr/screwdriver.png"
     </div>
     <div class="modal-footer">
       <a href="#!" class="modal-close waves-effect waves-red btn-flat">Zavřít</a>
@@ -107,7 +107,7 @@
     <div class="modal-content">
       <h4>Název</h4>
       <p>Krátký popisek</p>
-			<img src="img/knife.png"
+			<img src="img/pr/saw.png"
     </div>
     <div class="modal-footer">
       <a href="#!" class="modal-close waves-effect waves-red btn-flat">Zavřít</a>
@@ -124,22 +124,25 @@
 	<div class="row center">
 
 
-  <div class="col s12"><img src="img/klarka.png"><br><span id="name">Klára Machová</span><br><span id="post">Ta, co si místo CSP četla</span></div>
-	<div class="col s12"><img src="img/zuzka.png"><br><span id="name">Zuzana Halousková</span><br><span id="post">Upír již od roku 1997</span></div>
-	<div class="col s12"><img src="img/oliver.png"><br><span id="name">Oliver Filip Novotný</span><br><span id="post">Busts into the battlefield</span></div>
-	<div class="col s12"><img src="img/vlada.png"><br><span id="name">Vladimír Svoboda</span><br><span id="post">Epic memer</span></div>
-	<div class="col s12"><img src="img/filip.png"><br><span id="name">Filip Troníček</span><br><span id="post">Fucking useless</span></div>
+  <div class="col s12"><img src="img/p/klarka.png"><br><span id="name">Klára Machová</span><br><span id="post">Ta, co si místo CSP četla</span></div>
+	<div class="col s12"><img src="img/p/zuzka.png"><br><span id="name">Zuzana Halousková</span><br><span id="post">Upír již od roku 1997</span></div>
+	<div class="col s12"><img src="img/p/oliver.png"><br><span id="name">Oliver Filip Novotný</span><br><span id="post">Busts into the battlefield</span></div>
+	<div class="col s12"><img src="img/p/vlada.png"><br><span id="name">Vladimír Svoboda</span><br><span id="post">Epic memer</span></div>
+	<div class="col s12"><img src="img/p/filip.png"><br><span id="name">Filip Troníček</span><br><span id="post">Fucking useless</span></div>
 
 
 
 	</div>
 </section>
 
+</body>
+<link rel='stylesheet' type='text/css' href='//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css' /><style>@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap'); .madeBy { font-family: 'Open Sans', cursive; text-transform: uppercase; font-size: 1.2rem; } .madeBy>span>a { font-weight: 600; color: black; text-decoration: none; } .madeBy>span>a>img { border-radius: 250px; width: 25px; } </style><div class='madeBy center'>
+made with <i class="icon ion-heart"></i> and a little bit of code by &nbsp;
+ <span><a href="https://github.com/filiptronicek"><img src="http://github.com/filiptronicek.png"></a></span>&nbsp; &amp; &nbsp; <span><a href="https://github.com/klma13"><img src="http://github.com/klma13.png"></a></span></div>
 
+ <script src="//cdn.jsdelivr.net/npm/jquery.scrollto@2.1.2/jquery.scrollTo.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"> </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 	<script src="script.js">
 	</script>
-</body>
-
 </html>
