--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 </body>
 <link rel='stylesheet' type='text/css' href='//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css' /><style>@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap'); .madeBy { font-family: 'Open Sans', cursive; text-transform: uppercase; font-size: 1.2rem; } .madeBy>span>a { font-weight: 600; color: black; text-decoration: none; } .madeBy>span>a>img { border-radius: 250px; width: 25px; } </style><div class='madeBy center'>
 made with <i class="icon ion-heart"></i> and a little bit of code by &nbsp;
- <span><a href="https://github.com/filiptronicek"><img src="http://github.com/filiptronicek.png"></a></span>&nbsp; &amp; &nbsp; <span><a href="https://github.com/klma13"><img src="http://github.com/klma13.png"></a></span></div>
+ <span><a href="https://github.com/filiptronicek"><img src="https://github.com/filiptronicek.png"></a></span>&nbsp; &amp; &nbsp; <span><a href="https://github.com/klma13"><img src="https://github.com/klma13.png"></a></span></div>
 
  <script src="//cdn.jsdelivr.net/npm/jquery.scrollto@2.1.2/jquery.scrollTo.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"> </script>
