--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
 			</a>
 		</li>
     <li>
-			<a href="#!">
+			<a href="#port">
 				<i class="material-icons">smartphone</i> <!-- ikonka -->
 				Portfolio <!-- nápis menu -->
 			</a>
 		</li>
     <li>
-			<a href="#!">
+			<a href="#about">
 				<i class="material-icons">person</i> <!-- ikonka -->
 				O nás <!-- nápis menu -->
 			</a>
@@ -77,7 +77,7 @@
     <div class="modal-content">
       <h4>Název</h4>
       <p>Krátký popisek</p>
-			<img src="img/pr/knife.png"
+			<img src="img/pr/knife.jpg"
     </div>
     <div class="modal-footer">
       <a href="#!" class="modal-close waves-effect waves-red btn-flat">Zavřít</a>
@@ -92,7 +92,7 @@
     <div class="modal-content">
       <h4>Název</h4>
       <p>Krátký popisek</p>
-			<img src="img/pr/screwdriver.png"
+			<img src="img/pr/screwdriver.jpg"
     </div>
     <div class="modal-footer">
       <a href="#!" class="modal-close waves-effect waves-red btn-flat">Zavřít</a>
@@ -107,7 +107,7 @@
     <div class="modal-content">
       <h4>Název</h4>
       <p>Krátký popisek</p>
-			<img src="img/pr/saw.png"
+			<img src="img/pr/saw.jpg"
     </div>
     <div class="modal-footer">
       <a href="#!" class="modal-close waves-effect waves-red btn-flat">Zavřít</a>
@@ -122,17 +122,28 @@
 
 <section id="about">
 	<div class="row center">
-
+  <h2> O nás</h2>
 
   <div class="col s12"><img src="img/p/klarka.png"><br><span id="name">Klára Machová</span><br><span id="post">Ta, co si místo CSP četla</span></div>
 	<div class="col s12"><img src="img/p/zuzka.png"><br><span id="name">Zuzana Halousková</span><br><span id="post">Upír již od roku 1997</span></div>
 	<div class="col s12"><img src="img/p/oliver.png"><br><span id="name">Oliver Filip Novotný</span><br><span id="post">Busts into the battlefield</span></div>
 	<div class="col s12"><img src="img/p/vlada.png"><br><span id="name">Vladimír Svoboda</span><br><span id="post">Epic memer</span></div>
-	<div class="col s12"><img src="img/p/filip.png"><br><span id="name">Filip Troníček</span><br><span id="post">Fucking useless</span></div>
+	<div class="col s12"><img src="img/p/filip.png"><br><span id="name">Filip Troníček</span><br><span id="post">Kdo ví kde je</span></div>
 
 
 
 	</div>
+</section>
+
+<section id="contact" class="row">
+  <div class="col s8 "><iframe width="100%" height="500" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=14.445417523384096%2C50.108106473424066%2C14.448958039283754%2C50.1096357164406&amp;layer=mapnik&amp;marker=50.10887110103617%2C14.447187781333923" style="border: 1px solid black"></iframe><br/><small><a href="https://www.openstreetmap.org/?mlat=50.10887&amp;mlon=14.44719#map=19/50.10887/14.44719">Zobrazit větší mapu</a></small></div>
+  <div class="col s4">
+    Tech a.s.(s)
+    <br>
+    Adresa: Ortenovo nám. 443/6, 170 00 Praha 7-Holešovice
+    <br>
+    Telefon:
+  </div>
 </section>
 
 </body>
