Contact and footer

--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
 				O nás <!-- nápis menu -->
 			</a>
 		</li>
+		<li>
+		  <a href="#contact">
+		    <i class="material-icons">message</i>
+		    Kontakty 
+		  </a>
+		</li>
   </ul>
   <a href="#" data-target="slide-out" class="sidenav-trigger sticky"><i class="material-icons medium">menu</i></a>
 </header>
@@ -122,7 +128,9 @@
 
 <section id="about">
 	<div class="row center">
-  <h2> O nás</h2>
+  <h2>O nás</h2>
+	<br>
+	<br>
 
   <div class="col s12"><img src="img/p/klarka.png"><br><span id="name">Klára Machová</span><br><span id="post">Ta, co si místo CSP četla</span></div>
 	<div class="col s12"><img src="img/p/zuzka.png"><br><span id="name">Zuzana Halousková</span><br><span id="post">Upír již od roku 1997</span></div>
@@ -136,21 +144,23 @@
 </section>
 
 <section id="contact" class="row">
-  <div class="col s8 "><iframe width="100%" height="500" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=14.445417523384096%2C50.108106473424066%2C14.448958039283754%2C50.1096357164406&amp;layer=mapnik&amp;marker=50.10887110103617%2C14.447187781333923" style="border: 1px solid black"></iframe><br/><small><a href="https://www.openstreetmap.org/?mlat=50.10887&amp;mlon=14.44719#map=19/50.10887/14.44719">Zobrazit větší mapu</a></small></div>
-  <div class="col s4">
+  <h2 class="center"> Kontakty </h2>
+  <div class="col l8 s12"><iframe width="100%" height="500" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=14.445417523384096%2C50.108106473424066%2C14.448958039283754%2C50.1096357164406&amp;layer=mapnik&amp;marker=50.10887110103617%2C14.447187781333923" style="border: 1px solid black"></iframe><br/><small><a href="https://www.openstreetmap.org/?mlat=50.10887&amp;mlon=14.44719#map=19/50.10887/14.44719">Zobrazit větší mapu</a></small></div>
+  <div class="col l4 s12">
     Tech a.s.(s)
     <br>
     Adresa: Ortenovo nám. 443/6, 170 00 Praha 7-Holešovice
     <br>
-    Telefon:
+    Telefon: <a href="tel:00420722082413">+ 420 722 082 413 </a>
   </div>
 </section>
 
 </body>
+<footer>
 <link rel='stylesheet' type='text/css' href='//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css' /><style>@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap'); .madeBy { font-family: 'Open Sans', cursive; text-transform: uppercase; font-size: 1.2rem; } .madeBy>span>a { font-weight: 600; color: black; text-decoration: none; } .madeBy>span>a>img { border-radius: 250px; width: 25px; } </style><div class='madeBy center'>
 made with <i class="icon ion-heart"></i> and a little bit of code by &nbsp;
  <span><a href="https://github.com/filiptronicek"><img src="https://github.com/filiptronicek.png"></a></span>&nbsp; &amp; &nbsp; <span><a href="https://github.com/klma13"><img src="https://github.com/klma13.png"></a></span></div>
-
+</footer>
  <script src="//cdn.jsdelivr.net/npm/jquery.scrollto@2.1.2/jquery.scrollTo.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"> </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
