--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <li><div class="user-view">
       <div class="background">
       </div>
-      <a href="#user"><img class="circle" src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg"></a>
+      <a href="#user"><img class="circle logo" src="img/pr/tech-logo.png"></a>
       <a href=""><span class="white-text name">Tech</span></a>
     </div></li>
     <li>
@@ -120,7 +120,19 @@
     </div>
   </div>
 	</div>
-	
+	  <a class="waves-effect waves-light btn-large modal-trigger" href="#drillModal">Otvírák na mobil</a>
+	  <!-- Modal Structure -->
+  <div id="drillModal" class="modal">
+    <div class="modal-content">
+      <h4>Název</h4>
+      <p>Krátký popisek</p>
+			<img src="img/pr/drill.jpg"
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-close waves-effect waves-red btn-flat">Zavřít</a>
+    </div>
+  </div>
+	</div>
 	</div>
 </section>
 
