--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>Tech site</title>
+	<title>Kender a.s.(s)</title>
 	<link href="style.css" rel="stylesheet" type="text/css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -55,7 +55,7 @@
 			<div class="container">
 				<br><br>
         <h1 class="header center text-lighten-2">
-					tech
+					Kender
 					<h4 class="center">a.s.(s) </h4>
 				</h1>
 
@@ -159,7 +159,7 @@
   <h2 class="center"> Kontakty </h2>
   <div class="col l8 s12"><iframe width="100%" height="500" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=14.445417523384096%2C50.108106473424066%2C14.448958039283754%2C50.1096357164406&amp;layer=mapnik&amp;marker=50.10887110103617%2C14.447187781333923" style="border: 1px solid black"></iframe><br/><small><a href="https://www.openstreetmap.org/?mlat=50.10887&amp;mlon=14.44719#map=19/50.10887/14.44719">Zobrazit větší mapu</a></small></div>
   <div class="col l4 s12">
-    Tech a.s.(s)
+    Kender a.s.(s)
     <br>
     Adresa: Ortenovo nám. 443/6, 170 00 Praha 7-Holešovice
     <br>
