--- a/index.html
+++ b/index.html
@@ -133,6 +133,20 @@
     </div>
   </div>
 	</div>
+
+		  <a class="waves-effect waves-light btn-large modal-trigger" href="#lighterModal">Zapalovač na mobil</a>
+	  <!-- Modal Structure -->
+  <div id="lighterModal" class="modal">
+    <div class="modal-content">
+      <h4>Název</h4>
+      <p>Krátký popisek</p>
+			<img src="img/pr/lighter.jpg"
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-close waves-effect waves-red btn-flat">Zavřít</a>
+    </div>
+  </div>
+	</div>
 	</div>
 </section>
 
