--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
     <li><div class="user-view">
       <div class="background">
       </div>
-      <a href="#user"><img class="circle logo" src="img/pr/tech-logo.png"></a>
-      <a href=""><span class="white-text name">Tech</span></a>
+      <a><img class="circle logo" src="img/pr/logo.svg"></a>
     </div></li>
     <li>
 			<a id="link" href="#hero">
@@ -147,6 +146,8 @@
     </div>
   </div>
 	</div>
+	<h2>Deluxe edice</h2>
+	<img class="img-full" src="img/pr/ultimate_deluxe_gold_eddition_pack_s_pro.jpg"> 
 	</div>
 </section>
 
