--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <h5 class="header col s12 light">aneb všechno co si dokážete představit na mobilu</h5>
         </div>
         <div class="row center">
-          <a href="#products" id="download-button" class="btn-large waves-effect waves-light">Produkty</a>
+          <a href="#port" id="download-button" class="btn-large waves-effect waves-light">Produkty</a>
         </div>
 
       </div>
@@ -73,81 +73,33 @@
 <!-- Produkty -->
 <section id="port">
 	<div class="row center">
-  <!-- Modal Trigger -->
-<h2>Produkty</h2>
-  <a class="waves-effect waves-light btn-large modal-trigger" href="#knifeModal">Nůž na mobil</a>
+      <h2>Kender produkty</h2>
 
-  <!-- Nůž -->
-  <div id="knifeModal" class="modal">
-    <div class="modal-content">
-      <h4>Název</h4>
-      <p>Krátký popisek</p>
-			<img src="img/pr/knife.jpg"
-    </div>
-    <div class="modal-footer">
-      <a href="#!" class="modal-close waves-effect waves-red btn-flat">Zavřít</a>
-    </div>
-  </div>
-	</div>
+      <h3 class="product">Kender Opener®</h3>
+      <img class="img-full" src="img/pr/drill.jpg"> 
+      <br>
+      <h3 class="product">Kender Knife®</h3>
+      <img class="img-full" src="img/pr/knife.jpg"> 
+      <br>
+      <h3 class="product">Kender Lighter®</h3>
+      <img class="img-full" src="img/pr/lighter.jpg"> 
+      <br>
+      <h3 class="product">Kender Saw®</h3>
+      <img class="img-full" src="img/pr/saw.jpg">       
+      <br>
+      <h3 class="product">Kender Screwdriver®</h3>
+      <img class="img-full" src="img/pr/screwdriver.jpg">       
 
-  <a class="waves-effect waves-light btn-large modal-trigger" href="#screwModal">Šroubovák na mobil</a>
+      <h3 class="product">Váš telefon s vs. bez Kenderu Deluxe®</h3>
 
-  <!-- Modal Structure -->
-  <div id="screwModal" class="modal">
-    <div class="modal-content">
-      <h4>Název</h4>
-      <p>Krátký popisek</p>
-			<img src="img/pr/screwdriver.jpg"
-    </div>
-    <div class="modal-footer">
-      <a href="#!" class="modal-close waves-effect waves-red btn-flat">Zavřít</a>
-    </div>
-  </div>
-	</div>
-	
-	  <a class="waves-effect waves-light btn-large modal-trigger" href="#sawModal">Pila na mobil</a>
+      <div class="container">
+          <figure>
+            <div id="compare"></div>
+          </figure>
+          <input oninput="beforeAfter()" onchange="beforeAfter()" type="range" min="0" max="100" value="50" id="slider"/>
+        </div>
+        
 
-  <!-- Modal Structure -->
-  <div id="sawModal" class="modal">
-    <div class="modal-content">
-      <h4>Název</h4>
-      <p>Krátký popisek</p>
-			<img src="img/pr/saw.jpg"
-    </div>
-    <div class="modal-footer">
-      <a href="#!" class="modal-close waves-effect waves-red btn-flat">Zavřít</a>
-    </div>
-  </div>
-	</div>
-	  <a class="waves-effect waves-light btn-large modal-trigger" href="#drillModal">Otvírák na mobil</a>
-	  <!-- Modal Structure -->
-  <div id="drillModal" class="modal">
-    <div class="modal-content">
-      <h4>Název</h4>
-      <p>Krátký popisek</p>
-			<img src="img/pr/drill.jpg"
-    </div>
-    <div class="modal-footer">
-      <a href="#!" class="modal-close waves-effect waves-red btn-flat">Zavřít</a>
-    </div>
-  </div>
-	</div>
-
-		  <a class="waves-effect waves-light btn-large modal-trigger" href="#lighterModal">Zapalovač na mobil</a>
-	  <!-- Modal Structure -->
-  <div id="lighterModal" class="modal">
-    <div class="modal-content">
-      <h4>Název</h4>
-      <p>Krátký popisek</p>
-			<img src="img/pr/lighter.jpg"
-    </div>
-    <div class="modal-footer">
-      <a href="#!" class="modal-close waves-effect waves-red btn-flat">Zavřít</a>
-    </div>
-  </div>
-	</div>
-	<h2>Deluxe edice</h2>
-	<img class="img-full" src="img/pr/ultimate_deluxe_gold_eddition_pack_s_pro.jpg"> 
 	</div>
 </section>
 
