--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link href="style.css" rel="stylesheet" type="text/css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
+  <link rel="shortcut icon" type="image/png" href="./img/pr/favicon.png"/>
 </head>
 <header>
 	<!-- Menu -->
