--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link href="style.css" rel="stylesheet" type="text/css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="shortcut icon" type="image/png" href="./img/pr/favicon.png"/>
+
 </head>
 <header>
 	<!-- Menu -->
@@ -131,6 +131,8 @@
     Adresa: Ortenovo nám. 443/6, 170 00 Praha 7-Holešovice
     <br>
     Telefon: <a href="tel:00420722082413">+ 420 722 082 413 </a>
+		<br>
+    E-mail: <a href="mailto:kender@europe.com">kender@europe.com</a>
   </div>
 </section>
 
